--- a/composer.json
+++ b/composer.json
@@ -5,24 +5,29 @@
     "license": "MIT",
     "type": "project",
     "require": {
-        "php": ">=5.6.4",
-        "laravel/framework": "5.4.*",
+        "php": ">=7.0.0",
+        "Airmanbzh/php-html-generator": "^1.0",
+        "barryvdh/laravel-snappy": "^0.4.0",
+        "h4cc/wkhtmltoimage-amd64": "^0.12.3",
+        "h4cc/wkhtmltoimage-i386": "^0.12.3",
+        "h4cc/wkhtmltopdf-amd64": "^0.12.3",
+        "h4cc/wkhtmltopdf-i386": "^0.12.3",
+        "laracasts/flash": "^3.0",
+        "laravel/framework": "5.5.*",
         "laravel/tinker": "~1.0",
-        "barryvdh/laravel-snappy": "^0.3.3",
         "maatwebsite/excel": "^2.1",
         "nesbot/carbon": "^1.22",
         "tom-lingham/searchy": "^2.0",
-        "yajra/laravel-datatables-oracle": "^7.8",
-        "h4cc/wkhtmltopdf-i386": "^0.12.3",
-        "h4cc/wkhtmltopdf-amd64": "^0.12.3",
-        "h4cc/wkhtmltoimage-amd64": "^0.12.3",
-        "h4cc/wkhtmltoimage-i386": "^0.12.3"
+        "yajra/laravel-datatables-buttons": "^3.1",
+        "yajra/laravel-datatables-oracle": "^8.0"
     },
     "require-dev": {
+        "barryvdh/laravel-debugbar": "^3.1",
+        "barryvdh/laravel-ide-helper": "^2.4",
+        "filp/whoops": "~2.0",
         "fzaninotto/faker": "~1.4",
         "mockery/mockery": "0.9.*",
-        "barryvdh/laravel-ide-helper": "^2.4",
-        "phpunit/phpunit": "~5.7"
+        "phpunit/phpunit": "~6.0"
     },
     "autoload": {
         "classmap": [
@@ -52,6 +57,10 @@
         "post-update-cmd": [
             "Illuminate\\Foundation\\ComposerScripts::postUpdate",
             "php artisan optimize"
+        ],
+        "post-autoload-dump": [
+            "Illuminate\\Foundation\\ComposerScripts::postAutoloadDump",
+            "@php artisan package:discover"
         ]
     },
     "config": {
