Added Comfirm.JS package and completed supplier page with delete button

--- a/.env.example
+++ b/.env.example
@@ -38,5 +38,5 @@ DBSEED_GROUPS=10
 DBSEED_PRODUCTS=10
 DBSEED_SHIPMENTS=10
 
-SNAPPY_PDF_BINARY=""
-SNAPPY_IMAGE_BINARY=""
+SNAPPY_PDF_BINARY="vendor/h4cc/wkhtmltopdf-amd64/bin/wkhtmltopdf-amd64"
+SNAPPY_IMAGE_BINARY="vendor/h4cc/wkhtmltoimage-amd64/bin/wkhtmltoimage-amd64"
