--- a/composer.json
+++ b/composer.json
@@ -36,7 +36,10 @@
         ],
         "psr-4": {
             "App\\": "app/"
-        }
+        },
+        "files": [
+            "app/Helpers/helperFunctions.php"
+        ]
     },
     "autoload-dev": {
         "psr-4": {
